<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:id="@+id/titleTextView"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/playerLayout"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_title"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
            app:layout_constraintRight_toLeftOf="@id/titleTextView"
            android:id="@+id/playerScrollView"
            android:minHeight="100dp">
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerListView"
            android:minHeight="100dp"
            />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/playerLayout"
        app:layout_constraintLeft_toRightOf="@id/playerLayout"
        android:orientation="vertical"
        android:id="@+id/playerButtonsLayout"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/player_add"
        android:id="@+id/playerAddButton"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/player_new"
        android:id="@+id/playerNewButton"
        />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/playerLayout"
        app:layout_constraintTop_toBottomOf="@id/playerLayout"
        android:id="@+id/playersSelectedLayout"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playersSelectedTitle"
            android:text="@string/player_selected"
            />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playersSelectedListView"
            android:layout_marginTop="10dp"
            />
        </ScrollView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/playersSelectedLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:id="@+id/timeLayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeTextView"
            android:text="@string/time_title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeInfoView"
            android:text="@string/time_info"
            android:textSize="4pt"
            android:layout_marginLeft="5dp"
            />

        <EditText
            android:layout_marginLeft="30dp"
            android:id="@+id/editTextTextPersonName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="0"
             />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>